# computerraria

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  computerraria.twld  copy-world.sh  copy_world.sh  import_mod.sh  run-tests.sh
.github/workflows/: in-game-tests.yml  rust-tests.yml  tests.yml
app/doom3d/: .vimspector.json  Cargo.toml  build.rs  copy-bin.sh
app/doom3d/.cargo/: config.toml
app/doom3d/src/: main.rs  maps.rs  raycaster.rs
app/example/: Cargo.toml  copy_bin.sh
app/example/src/: main.rs
app/game-of-life/: .vimspector.json  Cargo.toml  README.md  copy-bin.sh
app/game-of-life/.cargo/: config.toml
app/game-of-life/src/: main.rs
app/pong/: .vimspector.json  Cargo.toml  copy-bin.sh
app/pong/src/: main.rs
app/riscv/: Cargo.toml  link.x
app/tdriver/: Cargo.toml  build.rs  copy_bin.sh  link.x  rust-analyzer.toml
app/tdriver/.cargo/: config.toml
app/tdriver/src/: graphics.rs  lib.rs  main.rs
app/template/: .vimspector.json  Cargo.toml  README.md  assembly.sh  binutils.sh  copy-bin.sh  copy_bin.sh
app/template/.cargo/: config.toml
app/template/src/: main.rs
app/terraria/: .vimspector.json  Cargo.toml  copy-bin.sh
app/terraria/src/: main.rs
app/tetris/: .vimspector.json  Cargo.toml  copy-bin.sh
app/tetris/.cargo/: config.toml
app/tetris/src/: main.rs  tiles.rs
app/video/: .vimspector.json  Cargo.toml  README.md  build.py  build.rs  copy-bin.sh
app/video/.cargo/: config.toml
app/video/src/: main.rs  video.rs
doc/: logo-old.pixil  logo.pixil  notes.txt
doc/old-worlds/: blank.wld
doc/reference/: computer-old.wld
docker/: Dockerfile  build.sh  push.sh  run.sh  tModLoader.targets
test/: .gitignore  config.ini
test/computerraria/: computerraria_isa.yaml  computerraria_platform.yaml  riscof_computerraria.py
test/computerraria/env/: link.ld  model_test.h
test/manual/: inf.s  inf.txt  loop.s  loop.txt
test/sail_cSim/: riscof_sail_cSim.py
test/sail_cSim/env/: link.ld  model_test.h
tinterface/: setup.py
tinterface/tinterface/: __init__.py
