[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdriver = { path = "../tdriver" }


[profile.dev]
panic = "abort"
opt-level = "z"
# strip="symbols"

[profile.release]
panic = "abort"
opt-level = "z"
# strip="symbols"
