[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[dependencies]
tdriver = { path = "../tdriver" }

[target.'cfg(target_arch = "riscv32")'.profile.dev]
debug = false
panic = "abort"
opt-level = "s"
overflow-checks = false
lto = true

[target.'cfg(not(target_arch = "riscv32"))'.profile.dev]

[profile.release]
panic = "abort"
opt-level = "s"
overflow-checks = false
lto = true

