[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
tdriver = { path = "../tdriver" }

# Dev is just the same as release since debug info is useless anyways
[profile.dev]
debug = false
panic = "abort"
opt-level = "z"
overflow-checks = false
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
overflow-checks = false
lto = true

